# Flet-File-System

./: .gitignore  README.md  pyproject.toml
FileSystem/: FileSystem.py
src/: main.py
src/FileSystem/: FileSystem.py  __init__.py
